# MGBI_names_Bomonka

./: .gitignore  CMakeLists.txt  main.cpp
Game/: Black hole.h  Button.h  CMakeLists.txt  Constants.h  Dialog.h  Game.cpp  Game.h  Kaleidoscope.h  MGsleep.h  MiniGame.h  Parser.h  Scene.h  Sound.h  Text.h  Texture.h  Thoughts.h
gladLib/: CMakeLists.txt
gladLib/include/glad/: glad.h
include/Game/: CMakeLists.txt  Game.h  camera.h  game.cpp  game.h  mesh.h  model.h  shader.h  shader_m.h
include/glad/: CMakeLists.txt  glad.cpp  glad.h
include/gladLib/src/: glad.c
lib/pkgconfig/: glfw3.pc
resources/: parse.txt  settings
resources/Shaders/: 3.glsl  Black-Hole-fragment-shader.glsl  Kaleidoscope.glsl  buffer_A.glsl  buffer_B.glsl  buffer_C.glsl  buffer_D.glsl  image.glsl  test.glsl
src/: main.cpp
